Added new files img/photo.jpg, package-lock.json and script.js, modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,147 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV-junior-Front-end developer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="
+     anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tetiana Lesivtsiv</h1>
-    <h2>Junior Front-end developer</h2>
-    <h3>Summary</h3>
-    <p></p>
+<header class="header">
+    <div>
+        <img src="img/photo.jpg" alt="Photo">
+    </div>
+    <h1 class="text-center my 2">Tetiana Lesivtsiv</h1>
+    <h2 class="text-center">Junior Front-end developer</h2>
+</header>
+<main>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h3>Technical skills</h3>
+                <p><b>Languages</b>:<br>
+                    JavaScript, JSON, SQL, HTML<br>
+                    Database: MySQL<br>
+                    Development Software:<br>
+                    VC Code, Chrome, Figma,<br>
+                    WebStorm, Source Tree<br>
+                    <b>Technologies</b>:<br>
+                    HTML, CSS<br>
+                    Bootstrap 4<br>
+                    JavaScript,<br>
+                    React, Node JS<br>
+                    Git, Scrum<br>
+                </p>
+            </div>
+
+            <div class="col-md-8">
+                <h3>Summary</h3>
+                    <p>Web development, HTML, CSS, JavaScript, React, Node JS, GIT and Version control GIT.<br>
+                        Software testing basics.<br>
+                        Accounting, accrual of salaries, issuance of certificates, issuance of salaries to
+                        depositors.</p>
+                        <hr>
+                            <h3>Education</h3>
+                                <p>IVAN FRANKO NATIONAL UNIVERSITY OF LVIV  1997- 2002<br>
+                                    Faculty of economics<br>
+                                    Specialty: accounting and audit.
+                                </p>
+                                <hr>
+                                    <h3>Work Exsperience</h3>
+                                <p>Accountant Ivan Franko National University of Lviv  2002-2007<br>
+                    Accrual of salaries
+                    Sick leaves, vacations
+                    Issuance of certificates
+                    Maternity leave I 2007-2015
+                    Course project "Money-tracker" in React  SEP 2021
+
+                </p>
+                <hr>
+
+            </div>
+            <div class="col-md-4">
+                <h3>Personal skills</h3>
+                <p>Organized<br>
+                    Team player<br>
+                    Fast learner<br>
+                    Motivated<br>
+                </p>
+            </div>
+            <div class="col-md-8">
+                <h4>Additional Education<br>(Courses)</h4>
+                <ul>
+                    <li>
+                        <h5>JUN-SEP 2021</h5>
+                        <h5>FRONT-END ADVANCED JAVASCRIPT CURSOR EDUCATION, LVIV </h5> 
+                        <p>At the course I studied:
+                        JavaScript Basic, ES6 + modular JavaScript, JS framework - React, State managment - Redux,
+                        Version Control Sustems(Git/Github), Module bundler WebPack</p>
+                    </li>
+                    <li>
+                        <h5>DEC 2019</h5>    
+                        <h5>HTML5/CSS3/JAVASCRIPT FUNDAMENTALS SOFTSERVE IT ACADEMY, LVIV</h5>  
+                        <p>At the course I studied:
+                        HTML, CSS, Bootstrap 4,JavaScript Basic</p>
+                    </li>
+                    <li>
+                        <h5>SEP 2018</h5>    
+                        <h5>BASICS OF WEB PROGRAMMING OKTEN WEB UNIVERSITY, LVIV</h5>
+                    </li> 
+                    <li>
+                        <h5>JUL 2018</h5>    
+                        <h5>BASICS WEB UI PROMETHEUS, ONLINE</h5>
+                        <hr>
+                    </li>
+                </ul>   
+            </div>
+
+            <div class="col-md-4">
+                <div class="contactInfo">
+                <h3>Contact Info</h3>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                        <span class="text">+380934796733</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                        <span class="text">tetyana.lesivtsiv@gmail.com</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+                        <span class="text">https://www.linkedin.com/in/tetiana-lesivtsiv</span>
+                        
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
+                        <span class="text">https://github.com/TanLes47</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-telegram" aria-hidden="true"></i></span>
+                        <span class="text">@tetyanales</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-skype" aria-hidden="true"></i></span>
+                        <span class="text">tanya.lesivtsiv</span>
+                    </li>
+                </ul>
+                <hr>
+                </div>
+            </div>
+        </div>    
+    <div>
 
     
+</main>
+<footer>
+
+
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+     crossorigin="anonymous">
+</script>
+<script src="script.js"></script>
 </body>
 </html>
